@@ -23,7 +23,8 @@ sys.path.append(os.path.abspath('.'))
 
 # Add any Sphinx extension module names here, as strings. They can be extensions
 # coming with Sphinx (named 'sphinx.ext.*') or your custom ones.
-extensions = ['ext', 'sphinx.ext.autodoc', 'sphinx.ext.jsmath', 'sphinx.ext.coverage']
+extensions = ['ext', 'sphinx.ext.autodoc', 'sphinx.ext.jsmath',
+              'sphinx.ext.coverage', 'sphinx.ext.todo']
 jsmath_path = 'dummy.js'
 
 # Add any paths that contain templates here, relative to this directory.
